# chaq-tiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  chaq-tiler.sln  notes.txt
chaq-tiler/: CMakeLists.txt  Desktop.cpp  Desktop.h  Enums.h  Globals.cpp  Globals.h  Rule.h  Vec.h  Views.h  Window.cpp  Window.h  chaq-tiler.cpp  chaq-tiler.vcxproj  chaq-tiler.vcxproj.filters  config.h  debug.h
chaq-win-traits/: CMakeLists.txt  chaq-win-traits.vcxproj  main.cpp
test-bench/: CMakeLists.txt  main.cpp  test-bench.vcxproj
